Sebastian urrego cardenas

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <article class="container">
         <h1>Juego de triqui trabajo de fabrica de software  </h1>
-        <div class="game-container">
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-          <div class="game-cell"></div>
-        </div>
+        <article class="game-container">
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+          <article class="game-cell"></article>
+        </article>
         <h2 class="game-notification"></h2>
         <button class="game-restart">De nuevo </button>    
-      </div>
+      </article>
       <script src="index.js"></script>
   
 </body>
